--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,12 @@ h2 {
 header {
     background-color: #306EA9;
 }
-
+    
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
+}
 header h1 {
     margin: 0;
     padding: 1rem 0;
