--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,9 @@ img{
 h2 {
     font-size: 2rem;
 }
+a {
+    text-decoration: none;
+}
 
 /* *********************** */
 
@@ -48,9 +51,12 @@ header .container {
 header h1 {
     margin: 0;
     padding: 1rem 0;
-    color: #F2C206;
 }
 
+h1 a,
+nav a {
+    color: #F2C206;
+}
 
 /* Table */
 .pokemonType{
@@ -69,6 +75,7 @@ table {
 
 table a {
     text-decoration: none;
+    color: #306EA9;
 }
 th {
     background-color: lightBlue;
@@ -134,4 +141,11 @@ tr:hover {
     top: 10px;
     cursor: pointer;
     background-color: black;
+}
+/* GENRATOR */
+
+.containerGeneratePokemon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
